--- a/imports/ui/body.html
+++ b/imports/ui/body.html
@@ -28,7 +28,7 @@
 
 		<ul class="category-list">
 		    {{# each categories}}
-		        {{> category}}
+		        {{> productCategory}}
 		    {{/each}}
 	    </ul>
 		
