input added, products.insert is broken, TODO:debug

--- a/imports/ui/bread.html
+++ b/imports/ui/bread.html
@@ -6,20 +6,9 @@
 		<div class="ingredients">Zutaten{{ingredients}}}</div>
 		<div class="weight">Gewicht: {{weight}}</div>
 		<div class="price">Preis: {{price}}</div>
-		<div class="quantity">Anzahl: 
-			<select class="select-quantity">
-	            <option>1</option>
-	            <option>2</option>
-	            <option>3</option>
-	            <option>4</option>
-	            <option>5</option>
-	            <option>6</option>
-	            <option>7</option>
-	            <option>8</option>
-	            <option>9</option>
-	            <option>10</option>
-	        </select>
-        </div>
+		<form action="quantity">
+			Anzahl: <input type="number" name="amount"> 
+		</form>
 		<div class="AddToCart">Add to Order.</div>
 		<div class = "productId">Produktnr: {{productId}}</div>
         <div class = "userId">{{userId}}</div>    
