--- a/imports/ui/productCategory.html
+++ b/imports/ui/productCategory.html
@@ -6,15 +6,11 @@
   </div>  
 </template>
 
-<template name="section-about">
-	<div class="section-about">
-		About
-	</div>	
-</template>
+
  
-<template name="section-contact">
-	<div class="section-contact">
-		<!-->tasks: Getreide/Milchvieh, Hofladen/Brotbacken</!-->
+<template name="contact">
+	<div class="contact">
+		<!--tasks: Getreide/Milchvieh, Hofladen/Brotbacken-->
 		<div class="task-field">{{task}}</div> 
 		<div class="name">{{name}} </div>
 		<div class="street">Lindlein 7</div>
