--- a/imports/ui/body.html
+++ b/imports/ui/body.html
@@ -23,18 +23,48 @@
 	  		<a href="#">Contact</a>
 		</div>
 
-
+		
     	<div class=header>Willkommen auf der Homepage des Demeterhofes Dietz!</div>
 
+    	<div class="section-about"></div>
+
+    	<form class="new-product">
+    			<select name="category" id="#category">
+    				<option value="grains">Getreide</option>
+					<option value="bread">Brot</option>
+					<option value="milk">Milchprodukte</option>
+					<option value="veggies">Obst und Gemüse</option>
+    			</select> <br>
+                <input type="text" name="name" placeholder="add name" /><br>
+                <input type="url" name="image" placeholder="add image" /><br>
+                <input type="text" name="weight" placeholder="add weight" /><br>
+                <input type="text" name="unit" placeholder="add unit" /><br>
+                <input type="text" name="description" placeholder="add description" /><br>
+                <input type="text" name="ingredients" placeholder="add ingredients" /><br>
+                <input type="text" name="price" placeholder="add price" /><br>
+                <input type="submit" value="submit" /><br>
+            </form>
+
 		<ul class="category-list">
-		    {{# each categories}}
+		    {{# each productCategories}}
 		        {{> productCategory}}
 		    {{/each}}
 	    </ul>
 		
+		<!--enter ProductCategories!!-->
+
 		<footer>
-			<div class="openHours"></div>
-			<div class="contact"></div>
+			<div class="openHours">
+				Öffnungszeiten:
+				<div>Backtag ist jeden Dienstag von 09:00 bis 20:00 Uhr</div>
+				<div>Mo, Mi - Sa nach Vereinbarung</div>
+			</div>
+
+			<div class="section-contact">
+				{{# each contacts}}
+		        	{{> contact}}
+		    	{{/each}}
+			</div>
 		</footer>
 
 	</div>
