--- a/imports/ui/milk-product.html
+++ b/imports/ui/milk-product.html
@@ -3,23 +3,10 @@
 		<img src="{{image}}" alt=":)" class="milk-img" />
 		<div class="name">{{name}}</div>
 		<div class="descripton">{{discription}}</div>
-		<div class="ingredients">Zutaten: {{ingredients}}}</div>
-		<div class="amount">Menge: {{amount}}</div>
 		<div class="price">Preis: {{price}}</div>
-		<div class="quantity">Anzahl: 
-			<select class="select-quantity">
-	            <option>1</option>
-	            <option>2</option>
-	            <option>3</option>
-	            <option>4</option>
-	            <option>5</option>
-	            <option>6</option>
-	            <option>7</option>
-	            <option>8</option>
-	            <option>9</option>
-	            <option>10</option>
-	        </select>
-        </div>
+		<form action="quantity">
+			Anzahl: <input type="number" name="amount"> {{unit}}
+		</form>
 		<div class="AddToCart">Add to Order</div>
 		<div class = "productId">Produktnr: {{productId}}</div>
         <div class = "userId">{{userId}}</div>    
