--- a/imports/ui/veggies.html
+++ b/imports/ui/veggies.html
@@ -2,22 +2,10 @@
 	<div class="subsection-veggies">
 		<img src="{{image}}" alt=":)" class="bread-img" />
 		<div class="name">{{name}}</div>
-		<div class="weight">Gewicht: {{weight}}</div>
 		<div class="price">Preis: {{price}}</div>
-		<div class="quantity">Anzahl: 
-			<select class="select-quantity">
-	            <option>1</option>
-	            <option>2</option>
-	            <option>3</option>
-	            <option>4</option>
-	            <option>5</option>
-	            <option>6</option>
-	            <option>7</option>
-	            <option>8</option>
-	            <option>9</option>
-	            <option>10</option>
-	        </select>
-        </div>
+		<form action="quantity">
+			Anzahl: <input type="number" name="amount"> {{unit}}
+		</form>
 		<div class="AddToCart">Add to Order.</div>
 		<div class = "productId">Produktnr: {{productId}}</div>
         <div class = "userId">{{userId}}</div>    
