sorted files to different subfolder, added routing

--- a/imports/client/ui/pages/bread.html
+++ b/imports/client/ui/pages/bread.html
@@ -1,5 +1,6 @@
-<template name="subsection-bread">
-	<div class="subsection-bread">
+
+<template name="page_bread">
+	<div class="page_bread">
 		<img src="{{image}}" alt=":)" class="bread-img" />
 		<div class="name">{{name}}</div>
 		<div class="descripton">{{discription}}</div>
