--- a/imports/client/ui/pages/grains.html
+++ b/imports/client/ui/pages/grains.html
@@ -1,5 +1,6 @@
-<template name="subsection-grain">
-	<div class="subsection-grain">
+
+<template name="page_grains">
+	<div class="page_grains">
 		<img src="{{image}}" alt=":)" class="grain-img" />
 		<!--Kartoffel, Getreide-->
 		<div class="name">{{name}}</div>
