--- a/imports/client/ui/pages/milk.html
+++ b/imports/client/ui/pages/milk.html
@@ -1,5 +1,6 @@
-<template name="subsection-milk-products">
-	<div class="subsection-milk-products">
+
+<template name="page_milk">
+	<div class="page_milk">
 		<img src="{{image}}" alt=":)" class="milk-img" />
 		<div class="name">{{name}}</div>
 		<div class="descripton">{{discription}}</div>
