--- a/imports/client/ui/pages/veggies.html
+++ b/imports/client/ui/pages/veggies.html
@@ -1,5 +1,5 @@
-<template name="subsecton-veggies">
-	<div class="subsection-veggies">
+<template name="page-veggies">
+	<div class="page-veggies">
 		<img src="{{image}}" alt=":)" class="bread-img" />
 		<div class="name">{{name}}</div>
 		<div class="price">Preis: {{price}}</div>
