added suscribe and categories section

--- a/imports/client/ui/pages/index.html
+++ b/imports/client/ui/pages/index.html
@@ -1,8 +1,8 @@
 <template name="page_index">
     categories
     <ul class="category-list">
-        {{# each productCategories}} 
-        	{{> productCategory}} 
+        {{#each productCategories}} 
+        	{{> component_productCategory}} 
         {{/each}}
     </ul>
 </template>
