routing works but only without germanc+ names, it failed

--- a/imports/client/ui/pages/admin.html
+++ b/imports/client/ui/pages/admin.html
@@ -7,7 +7,7 @@
             <option value="grains">Getreide</option>
             <option value="bread">Brot</option>
             <option value="milk">Milchprodukte</option>
-            <option value="veggies">Obst und Gemüse</option>
+            <option value="veggies">Frisches</option>
         </select>
         <br>
         <input type="text" name="name" placeholder="add name" />
