--- a/imports/client/ui/pages/milk.html
+++ b/imports/client/ui/pages/milk.html
@@ -6,7 +6,7 @@
 		<div class="descripton">{{discription}}</div>
 		<div class="price">Preis: {{price}}</div>
 		<form action="quantity">
-			Anzahl: <input type="number" name="amount"> {{unit}}
+			Anzahl: <input type="number" min="1" step="1" name="amount"> {{unit}}
 		</form>
 		<div class="AddToCart">Add to Order</div>
 		<div class = "productId">Produktnr: {{productId}}</div>
