--- a/imports/client/ui/pages/veggies.html
+++ b/imports/client/ui/pages/veggies.html
@@ -1,10 +1,10 @@
-<template name="page-veggies">
-	<div class="page-veggies">
+<template name="page_veggies">
+	<div class="page_veggies">
 		<img src="{{image}}" alt=":)" class="bread-img" />
 		<div class="name">{{name}}</div>
 		<div class="price">Preis: {{price}}</div>
 		<form action="quantity">
-			Anzahl: <input type="number" name="amount"> {{unit}}
+			Anzahl: <input type="number" min="1" step="1" name="amount"> {{unit}}
 		</form>
 		<div class="AddToCart">Add to Order.</div>
 		<div class = "productId">Produktnr: {{productId}}</div>
