fixed product routes, added some working examples

--- a/imports/client/ui/pages/bread.html
+++ b/imports/client/ui/pages/bread.html
@@ -3,6 +3,7 @@
 	<ul class="page_bread">  
 	    {{#each bread}} 
 	       	{{> component_bread}}
-	    {{/each}}    
+	    {{/each}}  
     </ul>   
+	{{> component_footer}}
 </template>
