added orders.insert, collects order items in array

--- a/imports/client/ui/pages/admin.html
+++ b/imports/client/ui/pages/admin.html
@@ -4,10 +4,10 @@
     <form class="new-product">
         <select name="category" id="#category">
             <option value="default"></option>
-            <option value="grains">Getreide</option>
-            <option value="bread">Brot</option>
-            <option value="milk">Milchprodukte</option>
-            <option value="veggies">Frisches</option>
+            <option value="Getreide">Getreide</option>
+            <option value="Brot">Brot</option>
+            <option value="Milchprodukte">Milchprodukte</option>
+            <option value="Obst und Gemüse">Obst und Gemüse</option>
         </select>
         <br>
         <input type="text" name="name" placeholder="add name" />
