--- a/imports/client/ui/pages/bread.html
+++ b/imports/client/ui/pages/bread.html
@@ -1,5 +1,6 @@
 
 <template name="page_bread">
+	{{> component_login}}
 	<ul class="page_bread">  
 	    {{#each bread}} 
 	       	{{> component_bread}}
