--- a/imports/client/ui/pages/veggies.html
+++ b/imports/client/ui/pages/veggies.html
@@ -2,11 +2,11 @@
 	<div class="page_veggies">
 		<img src="{{image}}" alt=":)" class="bread-img" />
 		<div class="name">{{name}}</div>
-		<div class="price">Preis: {{price}}</div>
+		<div class="price">Preis: {{price}} € pro {{unit}} </div>
 		<form action="quantity">
 			Anzahl: <input type="number" min="1" step="1" name="amount"> {{unit}}
 		</form>
-		<div class="AddToCart">Add to Order.</div>
+		<div class="addToCart">Add to Order</div>
 		<div class = "productId">Produktnr: {{productId}}</div>
         <div class = "userId">{{userId}}</div>    
 	</div>
