--- a/imports/client/ui/pages/milk.html
+++ b/imports/client/ui/pages/milk.html
@@ -1,14 +1,14 @@
 
 <template name="page_milk">
 	<div class="page_milk">
-		<img src="{{image}}" alt=":)" class="milk-img" />
+		<img src="{{imageSrc name}}" alt=":)" class="milk-img" />
 		<div class="name">{{name}}</div>
-		<div class="descripton">{{discription}}</div>
-		<div class="price">Preis: {{price}}</div>
+		<div class="descripton">{{description}}</div>
+		<div class="price">Preis: {{price}} € pro {{unit}}</div>
 		<form action="quantity">
 			Anzahl: <input type="number" min="1" step="1" name="amount"> {{unit}}
 		</form>
-		<div class="AddToCart">Add to Order</div>
+		<div class="addToCart">Add to Order</div>
 		<div class = "productId">Produktnr: {{productId}}</div>
         <div class = "userId">{{userId}}</div>    
 	</div>
