added /Bestellung, listing the items in order

--- a/imports/client/ui/pages/bread.html
+++ b/imports/client/ui/pages/bread.html
@@ -1,6 +1,7 @@
 
 <template name="page_bread">
-	{{> component_login}}
+	{{> component_nav}}
+	
 	<ul class="page_bread">  
 	    {{#each bread}} 
 	       	{{> component_bread}}
