--- a/imports/client/ui/pages/order.html
+++ b/imports/client/ui/pages/order.html
@@ -5,7 +5,7 @@
 	        <h3>Bestellte Artikel: </h3> 
 
 	        <div class="item-list">
-		        {{#each order}} 
+		        {{#each order.items}} 
 		        	{{> component_order}} 
 		        {{/each}} 
 	        </div>
